Refactor index.html with new content and structure
Updated the HTML structure and content of the index file.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a href="mailto:duggineni.muralikrishna@gmail.com">
+<!-- <a href="mailto:duggineni.muralikrishna@gmail.com">
   <button style="
     padding:10px 20px;
     background:#0078ff;
@@ -9,4 +9,24 @@
   ">
     Email Me
   </button>
+</a> -->
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Website</title>
+</head>
+<body>
+
+<h2>Hi! I am a Software Engineer.</h2>
+<p>
+  Hi! I’m a Software Engineer specializing in data systems and large-scale data processing.
+My expertise lies in working with data frameworks and distributed systems such as Hadoop, Spark, and Kafka. I enjoy solving challenging problems — whether it’s optimizing data pipelines, handling high-throughput data streams, or designing scalable architectures. I’m always open to collaboration and new opportunities.
+</p>
+
+<a href="mailto:duggineni.muralikrishna@gmail.com">
+  <button>Email Me</button>
 </a>
+
+</body>
+</html>
