--- a/index.html
+++ b/index.html
@@ -18,14 +18,23 @@
 </head>
 <body>
 
-<h2>Hi! I am a Software Engineer.</h2>
+<h2>Murali Krishna Duggineni.</h2>
 <p>
   Hi! I’m a Software Engineer specializing in data systems and large-scale data processing.
 My expertise lies in working with data frameworks and distributed systems such as Hadoop, Spark, and Kafka. I enjoy solving challenging problems — whether it’s optimizing data pipelines, handling high-throughput data streams, or designing scalable architectures. I’m always open to collaboration and new opportunities.
 </p>
 
 <a href="mailto:duggineni.muralikrishna@gmail.com">
-  <button>Email Me</button>
+ <button style="
+    padding:10px 20px;
+    background:#0078ff;
+    color:white;
+    border:none;
+    border-radius:6px;
+    cursor:pointer;
+  ">
+    Email Me
+  </button>
 </a>
 
 </body>
