--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </style>
 </head>
 <body>
-  <h2>Murali Krishna Duggineni.</h2>
+  <h2>Murali Krishna Duggineni</h2>
   <p>https://www.linkedin.com/in/murali-krishna-duggineni/<p>
   <p>
     Hi! I'm a Software Engineer specializing in data systems and large-scale data processing.
