--- a/index.html
+++ b/index.html
@@ -67,13 +67,25 @@
 </head>
 <body>
   <h2>Murali Krishna Duggineni</h2>
-  <p>https://www.linkedin.com/in/murali-krishna-duggineni/<p>
+ 
   <p>
     Hi! I'm a Software Engineer specializing in data systems and large-scale data processing.
     My expertise lies in working with data frameworks and distributed systems such as Hadoop, Spark, and Kafka. I enjoy solving challenging problems — whether it's optimizing data pipelines, handling high-throughput data streams, or designing scalable architectures. I'm always open to collaboration and new opportunities.
   </p>
   <a href="mailto:duggineni.muralikrishna@gmail.com">
-    <button>Email Me</button>
-  </a>
+  <button>Mail</button>
+</a>
+
+<a href="https://www.linkedin.com/in/murali-krishna-duggineni/" target="_blank">
+  <button style="background:#0A66C2; display:flex; align-items:center; justify-content:center; gap:8px;">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" 
+         alt="LinkedIn" 
+         width="18" 
+         height="18"
+         style="background:white; border-radius:3px; padding:2px;">
+    LinkedIn
+  </button>
+</a>
+
 </body>
 </html>
