--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
   </style>
 </head>
 <body>
-  <h2>Murali Krishna Duggineni.</h2>
+  <h2>Murali Krishna Duggineni</h2>
   <p>https://www.linkedin.com/in/murali-krishna-duggineni/<p>
   <p>
     Hi! I'm a Software Engineer specializing in data systems and large-scale data processing.
-    My expertise lies in working with data frameworks and distributed systems such as Hadoop, Spark, and Kafka. I enjoy solving challenging problems — whether it's optimizing data pipelines, handling high-throughput data streams, or designing scalable architectures. I'm always open to collaboration and new opportunities.
+    My expertise lies in working with data frameworks and distributed systems such as Hadoop, Spark, and Kafka. I enjoy solving problems — whether it's optimizing data pipelines, handling high-throughput data streams, or designing scalable architectures. I'm always open to collaboration and new opportunities.
   </p>
   <div class="button-row">
     <a href="mailto:duggineni.muralikrishna@gmail.com">
-      <button class="custom-btn">Email Me</button>
+      <button class="custom-btn">Email</button>
     </a>
     <a href="https://www.linkedin.com/in/murali-krishna-duggineni/" target="_blank">
       <button class="custom-btn linkedin-btn">
