Align content to the left in index.html
Adjust left margin and text alignment for better layout.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       margin: 20px;
       padding: 0 10px;
       max-width: 800px;
-      margin-left: auto;
+      margin-left: 0; /* Move content to the left */
       margin-right: auto;
+      text-align: left;
     }
     h2 {
       font-size: 1em;
