Refactor paragraph structure in index.html
Separated the last sentence into a new paragraph for clarity.

--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
   <h2>Murali Krishna Duggineni</h2>
   <p>
     Hi! I'm a Software Engineer specializing in data systems and large-scale data processing.
-    My expertise lies in working with data frameworks and distributed systems such as Hadoop, Spark, and Kafka. I enjoy solving problems — whether it's optimizing data pipelines, handling high-throughput data streams, or designing scalable architectures. I'm always open to collaboration and new opportunities.
+    My expertise lies in working with data frameworks and distributed systems such as Hadoop, Spark, and Kafka. I enjoy solving problems — whether it's optimizing data pipelines, handling high-throughput data streams, or designing scalable architectures. 
   </p>
+  <p>I'm always open to collaboration and new opportunities.</p>
   <div class="button-row">
     <a href="mailto:duggineni.muralikrishna@gmail.com">
       <button class="custom-btn">Email</button>
